Name on main page

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -19,6 +19,10 @@
 
   <body>
 
+    <script>
+$('#data-caption').html($('#data-caption').text().replace(/\n\r?/g, '<br />'));
+    </script>
+
 <!-- Banner -->
   <div class="banner-main">
         <img class ="banner-main d-none d-lg-block d-xl-block" src="../assets/images/banner_test.jpg" alt="A steaming cup of tea on an opened notebook, next to a pen cased inside a paper flower">
@@ -80,7 +84,7 @@
             <img src="../assets/gallery/contemplation-on-watert.jpg" class="img-thumbnail"></a></div>
 
           <div class="col-6 col-md-3 item" data-tags="3D Art">
-          <a class="thumbnail" onclick="loadDisqusForImage(6)" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="The Quiet of the Stream" data-caption="First Iray render made with the main character of my novel project The Aroostook Witch. I made her dress in Marvelous Designer, based on a Gunne Sax dress. The astonishing scene is Willow Creek by Stonemason." data-image="../assets/gallery/the-quiet-of-the-stream.jpg" data-target="#image-gallery">
+          <a class="thumbnail" onclick="loadDisqusForImage(6)" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="The Quiet of the Stream" data-caption="First Iray render made with the main character of my novel project The Aroostook Witch. Posed and rendered in DAZ Studio, dress made in Marvelous Designer, morphs adjustments in ZBrush, postwork in Photoshop. Character: Sybilla for Genesis 8 Female by Sangriart. Scene: Willow Creek by Stonemason." data-image="../assets/gallery/the-quiet-of-the-stream.jpg" data-target="#image-gallery">
             <img src="../assets/gallery/the-quiet-of-the-streamt.jpg" class="img-thumbnail"></a></div>
 
         </div>
