--- a/projects/Prey For The Gods/prey-for-the-gods.html
+++ b/projects/Prey For The Gods/prey-for-the-gods.html
@@ -89,6 +89,7 @@
       <a target="_blank" class="fab fa-twitter" href="https://twitter.com/RoseALacroix"></a>
       <a target="_blank" class="fab fa-tumblr" href="https://rose-writes-and-drinks-tea.tumblr.com/"></a>
       <a target="_blank" class="fab fa-discord" data-toggle="popover" data-content="Rose A. Lacroix#2649"></a>
+      <a target="_blank" class="fab fa-deviantart" href="https://www.deviantart.com/rose-reaper"></a>
       <a target="_blank" class="fab fa-github" href="https://github.com/RoseReaper"></a>
     <p>&copy; 2018 Rose A. Lacroix.</p>
   </footer>
