--- a/gallery/index.html
+++ b/gallery/index.html
@@ -126,6 +126,7 @@ $('#data-caption').html($('#data-caption').text().replace(/\n\r?/g, '<br />'));
       <a target="_blank" class="fab fa-twitter" href="https://twitter.com/RoseALacroix"></a>
       <a target="_blank" class="fab fa-tumblr" href="https://rose-writes-and-drinks-tea.tumblr.com/"></a>
       <a target="_blank" class="fab fa-discord" data-toggle="popover" data-content="Rose A. Lacroix#2649"></a>
+      <a target="_blank" class="fab fa-deviantart" href="https://www.deviantart.com/rose-reaper"></a>
       <a target="_blank" class="fab fa-github" href="https://github.com/RoseReaper"></a>
     <p>&copy; 2018 Rose A. Lacroix.</p>
   </footer>
