--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="col-12 col-md-11 welcome-left">
         <h1 class="handwritten-title">Welcome</h1>
         <h2 class="welcome-title">to my online Portfolio</h2>
-        <p>My name is <b>Rose</b> (Elodie Changey for real), and I'm a French <b>developer</b>, <b>writer</b> and <b>artist</b>. </br>
+        <p>My name is <b>Elodie Changey</b>, but here I'm just Rose. I'm a French <b>developer</b>, <b>writer</b> and <b>artist</b>. </br>
         I share my work here. You can expect to find several projects, each of a different nature. Feel free to reach out if you have a question, or a suggestion about my content.</p>
         <a class="welcome-readmore" href="/about-me/">Read more about me</a>
         <img class="welcome-left-corner d-none d-lg-block d-xl-block" src="assets/images/corner.png">
