The Elder's Feast new title

--- a/projects/index.html
+++ b/projects/index.html
@@ -62,7 +62,7 @@
             <div class="card">
               <img class="card-img-top" src="../assets/projects/prey-for-the-godst.jpg">
               <div class="card-body">
-                <h5 class="card-title"><a href="#">Prey For The Gods</a></h5>
+                <h5 class="card-title"><a href="#">The Elder's Feast</a></h5>
               </div>
             </div>
           </div>
