Spelled 'developer' correctly

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Home | Rose A. Lacroix</title>
     <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-      <meta name="description" content="Website of Rose A. Lacroix: writer, developper, grim reaper. Home of all writing things." />
+      <meta name="description" content="Website of Rose A. Lacroix: writer, developer, grim reaper. Home of all writing things." />
       <meta name="author" content="Rose A. Lacroix" />
       <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -19,7 +19,7 @@
     <div class="page-container">
       <div class="title">
         <h1>Rose&nbsp;A. Lacroix</h1>
-        <h2>Writer, developper, grim reaper</h2>
+        <h2>Writer, developer, grim reaper</h2>
       </div>
       <hr>
       <div class="content">
