Change Rose A. Lacroix -> Ombeline Lacroix

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Home | Rose A. Lacroix</title>
+    <title>Home | Ombeline Lacroix</title>
     <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-      <meta name="description" content="Website of Rose A. Lacroix: writer, developer, grim reaper. Home of all writing things." />
-      <meta name="author" content="Rose A. Lacroix" />
+      <meta name="description" content="Website of Ombeline Lacroix: writer, developer, grim reaper. Home of all writing things." />
+      <meta name="author" content="Ombeline Lacroix" />
       <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
       <link rel="stylesheet" href="styles/style.css" />
@@ -18,7 +18,7 @@
 
     <div class="page-container">
       <div class="title">
-        <h1>Rose&nbsp;A. Lacroix</h1>
+        <h1>Ombeline Lacroix</h1>
         <h2>Writer, developer, grim reaper</h2>
       </div>
       <hr>
@@ -30,9 +30,9 @@
       <footer>
           <div class="footer-text">Stay in touch:</div>
           <div class="social-media-icons">
-            <a target="_blank" class="fab fa-twitter-square" href="https://twitter.com/RoseALacroix"></a>
-            <a target="_blank" class="fab fa-tumblr-square" href="https://rosealacroix.tumblr.com/"></a>
-            <a target="_blank" class="fab fa-instagram-square" href="https://www.instagram.com/rosealacroix/"></a>
+            <a target="_blank" class="fab fa-twitter-square" href="https://twitter.com/ombelinelacroix"></a>
+            <a target="_blank" class="fab fa-tumblr-square" href="https://ombelinelacroix.tumblr.com/"></a>
+            <a target="_blank" class="fab fa-instagram-square" href="https://www.instagram.com/ombelinelacroix/"></a>
           </div>
       </footer>
 
