--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <link rel="stylesheet" href="styles/style.css" />
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lovers+Quarrel&display=swap">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap">
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-XQFGZ3FB5G"></script>
       <script type="text/javascript" src="scripts/gtag.js"></script>
   </head>
 
